--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -1,6 +1,6 @@
 <h1>New author</h1>
 
-<%= form_with scope: :author, local: true do |form| %>
+<%= form_with scope: :author, url: :authors, local: true do |form| %>
   <p>
     <%= form.label :first_name %><br>
     <%= form.text_field :first_name %>
